--- a/README
+++ b/README
@@ -12,3 +12,6 @@ data sourced from http://www.google.com/adplanner/static/top1000/
 
 Inspired by HuffPo article http://www.huffingtonpost.com/2011/06/24/most-visited-sites-2011_n_883756.html#s297574&title=17__Youkucom
 
+
+This site is not exhaustive. According to Google's description:
+"Keep in mind that the list excludes adult sites, ad networks, domains that don't have publicly visible content or don't load properly, and certain Google sites."
